<resources>
    <string name="company_name_txt">바이셀스탠다드</string>
    <string name="inspection_title">지금은 서비스 점검 중이에요</string>
    <string name="inspection_content">보다 안정적인 PIECE 서비스를 제공하기 위해\n시스템 점검을 진행하고 있습니다.\n서비스 이용에 불편을 드려 죄송합니다</string>
    <string name="scheme_host_main">MainActivity</string>
    <string name="scheme_host_detail">PortfolioDetailNewActivity</string>
    <string name="scheme_host_splash">splash</string>
    <string name="scheme_host_magazine_post">magazinePost</string>
    <string name="scheme_host_portfolio">portfolio</string>
    <string name="scheme_host_event">event</string>
    <string name="scheme_host_notice">notice</string>
    <string name="scheme_host_alarm">alarm</string>
    <string name="scheme_host_home">home</string>
    <string name="scheme_host_magazine">magazine</string>
    <string name="scheme_host_wallet">wallet</string>
    <string name="scheme_host_more">more</string>
    <string name="scheme_host_plc0101">PLC0101</string>
    <string name="scheme_host_plc0102">PLC0102</string>
    <string name="scheme_host_plc0103">PLC0103</string>
    <string name="scheme_host_plc0104">PLC0104</string>
    <string name="scheme_host_plc0105">PLC0105</string>
    <string name="scheme_host_plc0106">PLC0106</string>
    <string name="scheme_host_plc0107">PLC0107</string>
    <string name="scheme_host_plc0108">PLC0108</string>
    <string name="scheme_host_plc0109">PLC0109</string>
    <string name="see_more_txt">자세히 보기</string>
    <string name="default_notification_channel_id">96071973609</string>
    <string name="playstore_url">market://details?id=run.piece.dev</string>
    <string name="update_title_txt">업데이트 안내</string>
    <string name="update_content_txt">새로운 버전이 업데이트되었어요. \n\n업데이트 버튼이 보이지 않는다면,\n기기 설정에서 Google Play 스토어의 캐시를 삭제해 주세요.</string>
    <string name="confirm">확인</string>
    <string name="cancle">취소</string>
    <string name="back_txt">뒤로</string>
    <string name="registration_btn_txt">등록</string>
    <string name="unlock_txt">해제</string>
    <string name="logout_txt">로그아웃</string>
    <string name="revoke_txt">철회하기</string>
    <string name="go_consent_txt">동의하러 가기</string>
    <string name="dismiss">닫기</string>
    <string name="i_beta_text"><u>서비스 둘러보기</u></string>
    <string name="j_top_title">본인 확인</string>
    <string name="j_sub_title">피스를 더 안전하게 이용하기 위한 절차예요.</string>
    <string name="j_name_title">이름</string>
    <string name="j_name_hint">이름 입력</string>
    <string name="j_birth_title">생년월일</string>
    <string name="j_birth_hint">ex) 19990617</string>
    <string name="j_gender_title">성별</string>
    <string name="j_gender_man">남자</string>
    <string name="j_gender_woman">여자</string>
    <string name="j_phone_title">통신사</string>
    <string name="j_phone_hint">통신사 선택</string>
    <string name="j_user_phone_title">휴대폰 번호</string>
    <string name="j_user_phone_hint">하이픈(-) 없이 입력</string>
    <string name="agency_01">SKT</string>
    <string name="agency_02">KT</string>
    <string name="agency_03">LG U+</string>
    <string name="agency_04">SKT 알뜰폰</string>
    <string name="agency_05">KT 알뜰폰</string>
    <string name="agency_06">LG U+ 알뜰폰</string>
    <string name="confirm_btn_title">확인</string>
    <string name="confirm_btn_next_title">다음</string>
    <string name="c_top_title">약관 동의</string>
    <string name="c_all_agree">전체 동의하기</string>
    <string name="ok_next_step_txt">동의하고 계속하기</string>
    <string name="c_common">[필수]</string>
    <string name="c_select">[선택]</string>
    <string name="sms_title">인증번호 입력</string>
    <string name="sms_hint">전송된 인증번호 입력</string>
    <string name="sms_retry">재전송</string>
    <string name="passcode_title">간편 비밀번호 등록</string>
    <string name="passcode_title_c">숫자 6자리를 입력해 주세요.</string>
    <string name="passcode_title_verify">비밀번호가 일치하지 않아요.</string>
    <string name="passcode_clear">초기화</string>
    <string name="password_title">간편 비밀번호 등록</string>
    <string name="password_title_input">간편 비밀번호 입력</string>
    <string name="password_title_change">간편 비밀번호 재설정</string>
    <string name="password_sub_title">숫자 6자리를 입력해 주세요.</string>
    <string name="password_sub_re_title">한 번 더 입력해 주세요.</string>
    <string name="password_sub_verify_title">비밀번호가 일치하지 않아요.</string>
    <string name="password_sub_purchase_title">현재 비밀번호와 일치하지 않습니다.</string>
    <string name="password_sub_not_equals">비밀번호가 맞지 않아요 (%1$s/5)</string>
    <string name="password_sub_change_title">현재 비밀번호를 입력해 주세요.</string>
    <string name="password_sub_change_next_title">새로운 비밀번호를 입력해 주세요.</string>
    <string name="password_sub_verify_repeat_title">반복된 숫자는 비밀번호로 사용할 수 없어요</string>
    <string name="password_sub_verify_continuous_title">연속된 숫자는 비밀번호로 사용할 수 없어요</string>
    <string name="password_sub_verify_info_title">개인정보가 포함되는 숫자는 사용할 수 없어요</string>
    <string name="password_sub_verify_equals_title">현재 비밀번호와 다르게 입력해 주세요</string>
    <string name="security_confirm_title">보안 강화 안내</string>
    <string name="security_confirm_content">개인정보 보호를 위해 강화된 비밀번호를 \n사용하시는 것을 권장해 드려요.</string>
    <string name="security_confirm_ok_title">지금 변경하기</string>
    <string name="security_confirm_cancel_title">다음에 할게요</string>
    <string name="reset_pwd_title">비밀번호 재설정</string>
    <string name="reset_pwd_content">오류 횟수 초과로 재설정이 필요해요.</string>
    <string name="reset_pwd_btn_title">재설정</string>
    <string name="reset_success_pwd_title">비밀번호 변경 완료</string>
    <string name="reset_success_pwd_content">확인을 누르면 설정으로 이동해요.</string>
    <string name="reset_success_pwd_btn_title">확인</string>
    <string name="investment_intro_top_title">%1$s님의 투자성향 분석을 \n시작할게요</string>
    <string name="investment_intro_start_btn_title">시작하기</string>
    <string name="investment_intro_next_btn_title">다음에 하기</string>
    <string name="investment_notice_top_title">취약투자자 유의사항 \n설명 확인서</string>
    <string name="investment_notice_content_title_1">본 금융상품은 원금 손실 가능성이 있습니다.</string>
    <string name="investment_notice_content_title_2">본 금융상품은 예금자보호법에 따라 예금보험공사가 보호하지 않습니다.</string>
    <string name="investment_notice_content_title_3">본인은 귀사로부터 금융 취약투자자 유의사항을 우선적으로 설명 받았으며, 그 내용을 충분히 이해하였음을 확인합니다.</string>
    <string name="investment_step_1_guide_title_1">만 65세 이상 고령투자자</string>
    <string name="investment_step_1_guide_title_2">만 19세 이하 미성년자</string>
    <string name="investment_step_1_guide_title_3">금융투자상품 투자 경험이 없는 분 등</string>
    <string name="investment_common_btn_1">예</string>
    <string name="investment_common_btn_2">아니오</string>
    <string name="investment_modal_title">투자성향 분석 진행 중지</string>
    <string name="investment_modal_content">지금 투자성향 분석을 멈추시면 \n답변하신 정보들이 사라져요.</string>
    <string name="investment_modal_btn_stop_title">그만하기</string>
    <string name="investment_modal_btn_continue_title">계속하기</string>
    <string name="investment_loading_title">지금 투자성향을 \n분석 중이에요</string>
    <string name="investment_last_btn_title">분석 결과 보기</string>
    <string name="investment_result_top_title">%1$s님은 \n%2$s이에요</string>
    <string name="investment_result_description_title">%1$s은 \n이런 투자성향을 가져요</string>
    <string name="investment_result_product_title">이런 금융상품에 \n관심이 많아요</string>
    <string name="investment_result_btn_retry_title">다시 분석하기</string>
    <string name="investment_result_btn_product_title">더 많은 상품 만나보기</string>
    <string name="investment_result_count_text">오늘 %1$s번 더 가능해요</string>
    <string name="investment_result_over_text">오늘 분석 가능한 횟수를 초과했어요</string>
    <string name="investment_more_item_title">투자 DNA</string>
    <string name="investment_more_item_null_title">나의 투자성향은?</string>
    <string name="investment_more_item_null_btn_title">성향분석</string>
    <string name="investment_more_item_btn_title">결과보기</string>
    <string name="investment_retry_count_text">오늘 %d번 더 가능해요</string>
    <string name="investment_retry_not_available_text">오늘 분석 가능한 횟수를 초과했어요</string>
    <string name="investment_error_title">투자성향 분석 오류</string>
    <string name="investment_error_message">알 수 없는 에러가 발생했어요. 다시 시도해 주세요.</string>
    <string name="investment_bottom_sheet_top_title">투자상품 위험 고지</string>
    <string name="investment_bottom_sheet_middle_title">손실위험이 높은 상품은 \n%1$s에게 적합하지 않은 상품이에요. \n계속 진행하시겠어요?</string>
    <string name="investment_bottom_sheet_confirm_btn_title">살펴볼게요</string>
    <string name="investment_bottom_sheet_next_btn_title">다음에 할게요</string>
    <string name="invest_result_1">공격투자형</string>
    <string name="invest_result_2">적극투자형</string>
    <string name="invest_result_3">위험중립형</string>
    <string name="invest_result_4">안전추구형</string>
    <string name="invest_result_5">안정형</string>
    <string name="p_today_close">오늘은 보지 않기</string>
    <string name="re_auth"><u>재인증</u></string>
    <string name="address_register"><u>주소 등록</u></string>
    <string name="email_register"><u>이메일 등록</u></string>
    <string name="address_change"><u>주소 변경</u></string>
    <string name="email_change"><u>이메일 변경</u></string>
    <string name="notice_text"><u>사용시 유의사항</u></string>
    <string name="copy_title"><u>복사하기</u></string>
    <string name="account_change_title"><u>변경</u></string>
    <string name="auth_notice"><u>개인정보 처리방침</u></string>
    <string name="info_text">
        조각 판매 후 해당 자산을 매각해 조각 구매자에게 발생한 차익을 조각 수에 비례하여 분배하기까지 걸리는 기간입니다.\n
        운용 기간은 포트폴리오에 따라 미리 정해져 있습니다.\n
        단, 해당 자산의 매각 상황에 따라 예정보다 빨리 분배되거나 운용 기간이 연장될 수 있습니다.\n
    </string>
    <string name="grade_text">
        포트폴리오의 현재 자산 가치와 운용 기간 이후의 실현 가치 및 시세
        상승률을 평가해 SS/S 2단계로 분류한 피스의 등급 체계입니다.\n
        PIECE 종합등급은 자산 평가의 3가지 기준인 안정성, 환금성, 수익성을 종합적으로
        분석해 부여합니다.\n
    </string>
    <string name="grade_text_1">
        • 안정성 - 상품 가치에 대한 담보력
    </string>
    <string name="grade_text_2">
        • 환금성 - 부실 발생 시 매각 가능성 또는 회수력
    </string>
    <string name="grade_text_3">
        • 수익성 - 예상 시세 상승률
    </string>
    <string name="securities_non_txt">비증권</string>
    <string name="securities_txt">증권</string>
    <string name="investment_contract_security_text">투자계약증권</string>
    <string name="access_title">정보 관리</string>
    <string name="bio_text">생체인증 사용</string>
    <string name="pass_text">간편비밀번호 변경</string>
    <string name="member_delete">회원 탈퇴</string>
    <string name="guide_confirm_text">확인을 누르면 첫 화면으로 이동해요</string>
    <string name="noti_text">알림</string>
    <string name="benefit_text">혜택</string>
    <string name="alarm_guide_text">자산 변동과 거래에 대한 \n알림이 표시됩니다.</string>
    <string name="alarm_guide_text_2">이벤트와 혜택에 대한 \n 알림이 표시됩니다.</string>
    <string name="retry_text">다시 시도</string>
    <string name="btn_retry_text">다시 시도하기</string>
    <string name="receive_txt">받기</string>
    <string name="confirm_text">확인</string>
    <string name="first_title_txt">처음으로</string>
    <string name="delete_text">탈퇴</string>
    <string name="more_title_1">피스와 함께한지</string>
    <string name="more_title_2">공지사항</string>
    <string name="more_title_3">이벤트</string>
    <string name="more_title_4">쿠폰함</string>
    <string name="more_title_5">인증 및 보안</string>
    <string name="more_title_6">문자 및 알림 수신 설정</string>
    <string name="more_title_7">약관 및 개인정보 이용 동의</string>
    <string name="more_title_8">자주 묻는 질문</string>
    <string name="more_title_9">카카오톡 상담하기</string>
    <string name="virtual_1">이제,</string>
    <string name="virtual_2">입금</string>
    <string name="virtual_3">만 하시면</string>
    <string name="virtual_4">충전</string>
    <string name="virtual_5">이</string>
    <string name="virtual_6">완료</string>
    <string name="virtual_7">되요!</string>
    <string name="virtual_8">입금하실 금액</string>
    <string name="virtual_9">원</string>
    <string name="virtual_10">김피스님의 가상계좌에요</string>
    <string name="virtual_11">케이뱅크 01012345678</string>
    <string name="time_text">유효기간 :</string>
    <string name="withdraw_fail_title">출금에 실패했어요</string>
    <string name="withdraw_fail_title_txt">잠시 후 다시 시도해주세요.</string>
    <string name="end_title">그동안 피스를 이용해 주셔서 \n 감사합니다</string>
    <string name="end_title_1">더 좋은 서비스로 찾아뵐게요.</string>
</resources>