<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- 충전 신청 완료 Activity -->
<!--        <variable-->
<!--            name="activity"-->
<!--            type="run.piece.dev.view.deposit.MyDepositActivity" />-->

        <!-- 회원 계좌 정보 조회 ViewModel -->
        <variable
            name="memberAccountVm"
            type="run.piece.dev.data.viewmodel.AccountViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="88dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_regular"
                    android:gravity="center"
                    android:textSize="26dp"
                    android:lineHeight="34dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/virtual_1"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:gravity="center"
                    android:lineHeight="34dp"
                    android:text="@string/virtual_2"
                    android:textColor="@color/black"
                    android:textSize="26dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_regular"
                    android:gravity="center"
                    android:lineHeight="34dp"
                    android:textSize="26dp"
                    android:text="@string/virtual_3"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/title2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:gravity="center"
                    android:lineHeight="34dp"
                    android:textSize="26dp"
                    android:text="@string/virtual_4"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_regular"
                    android:gravity="center"
                    android:lineHeight="34dp"
                    android:textSize="26dp"
                    android:text="@string/virtual_5"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/title4"
                    app:layout_constraintTop_toTopOf="@+id/title4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:gravity="center"
                    android:lineHeight="34dp"
                    android:textSize="26dp"
                    android:text="@string/virtual_6"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/title7"
                    app:layout_constraintTop_toTopOf="@+id/title4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:gravity="center"
                    android:lineHeight="34dp"
                    android:textSize="26dp"
                    android:text="@string/virtual_7"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/charge_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:gravity="center"
                    android:lineHeight="25dp"
                    android:textSize="16dp"
                    android:text="@string/virtual_8"
                    android:textColor="@color/g700_757983"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chargeMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/pretendard_extrabold"
                    android:lineHeight="34dp"
                    android:text=""
                    android:textColor="@color/p500_10CFC9"
                    android:textSize="26dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/won"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:lineHeight="25dp"
                    android:text="@string/virtual_9"
                    android:textColor="@color/p500_10CFC9"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/chargeMoney"
                    app:layout_constraintStart_toEndOf="@+id/chargeMoney"
                    app:layout_constraintTop_toTopOf="@+id/chargeMoney" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/charge_gif"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chargeMoney" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/account_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="11dp"
                    android:background="@drawable/layout_round_f9f9f9"
                    app:layout_constraintTop_toBottomOf="@+id/charge_gif">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/bank_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/pretendard_bold"
                        android:lineHeight="20dp"
                        android:text="@string/virtual_10"
                        android:textColor="@color/g700_757983"
                        android:textSize="14dp"
                        app:layout_constraintStart_toEndOf="@+id/bank_icon"
                        app:layout_constraintTop_toTopOf="@+id/bank_icon" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/account_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/pretendard_regular"
                        android:lineHeight="20dp"
                        android:text="@string/virtual_11"
                        android:textColor="@color/g700_757983"
                        android:textSize="14dp"
                        app:layout_constraintStart_toEndOf="@+id/bank_icon"
                        app:layout_constraintTop_toBottomOf="@+id/userName" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/copy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/pretendard_regular"
                        android:lineHeight="28dp"
                        android:text="@string/copy_title"
                        android:textColor="@color/g700_757983"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_bold"
                android:gravity="center"
                android:text="@string/time_text"
                android:textColor="@color/c_FF7878"
                android:textSize="14dp"
                android:lineHeight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:lineHeight="20dp"
                android:textColor="@color/c_FF7878"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/layout_round_10cfc9"
            android:gravity="center"
            android:lineHeight="25dp"
            android:text="@string/confirm_text"
            android:textColor="@drawable/j_selector_text_color"
            android:textSize="14dp"
            app:fontFamily="@font/pretendard_bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>